--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             color: white;
             font-family: "Classic Console Neue";
             font-size: 20px;
-            text-shadow: 0 0 2px #fff;
+            /*text-shadow: 0 0 2px #fff;*/
         }
         .screen {
             background-color: black;
@@ -65,7 +65,7 @@
         }
         .pink {
             color: rgb(255, 129, 247);
-            text-shadow: 0 0 2px rgb(255, 129, 247);
+            /*text-shadow: 0 0 2px rgb(255, 129, 247);*/
         }
         .pink::selection {
             background-color: rgb(255, 129, 247);
